--- a/airPolution/airPolution/Base.lproj/Main.storyboard
+++ b/airPolution/airPolution/Base.lproj/Main.storyboard
@@ -33,25 +33,25 @@
                                     <action selector="checkPoluitonButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4zl-bd-gBe"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Qkh-Mf-KfA">
-                                <rect key="frame" x="-220" y="521" width="273" height="126"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Qkh-Mf-KfA">
+                                <rect key="frame" x="20" y="521" width="345" height="126"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="PM 2.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="NIN-GM-zrb">
-                                        <rect key="frame" x="0.0" y="0.0" width="273" height="38.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PM 2.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="NIN-GM-zrb">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="38"/>
                                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="PM 10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfL-o5-ML6">
-                                        <rect key="frame" x="0.0" y="43.5" width="273" height="39"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PM 10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfL-o5-ML6">
+                                        <rect key="frame" x="0.0" y="44" width="345" height="38"/>
                                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="CO 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPO-1x-Q0P">
-                                        <rect key="frame" x="0.0" y="87.5" width="273" height="38.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CO 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPO-1x-Q0P">
+                                        <rect key="frame" x="0.0" y="88" width="345" height="38"/>
                                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -65,25 +65,25 @@
                                     <constraint firstItem="gfL-o5-ML6" firstAttribute="width" secondItem="NIN-GM-zrb" secondAttribute="width" id="gC4-o4-7Qx"/>
                                 </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sZX-4H-1KZ">
-                                <rect key="frame" x="283" y="521" width="52" height="126"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="sZX-4H-1KZ">
+                                <rect key="frame" x="40" y="521" width="345" height="126"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMf-RU-CR8">
-                                        <rect key="frame" x="0.0" y="0.0" width="52" height="38.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMf-RU-CR8">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="38"/>
                                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FI3-g8-Rnf">
-                                        <rect key="frame" x="0.0" y="43.5" width="52" height="39"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FI3-g8-Rnf">
+                                        <rect key="frame" x="0.0" y="44" width="345" height="38"/>
                                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJm-V7-R7O">
-                                        <rect key="frame" x="0.0" y="87.5" width="52" height="38.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VALUE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJm-V7-R7O">
+                                        <rect key="frame" x="0.0" y="88" width="345" height="38"/>
                                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -97,20 +97,20 @@
                                     <constraint firstItem="dJm-V7-R7O" firstAttribute="width" secondItem="dMf-RU-CR8" secondAttribute="width" id="zP9-qZ-u9n"/>
                                 </constraints>
                             </stackView>
-                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uUx-ig-gpm">
-                                <rect key="frame" x="0.0" y="106" width="375" height="70"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uUx-ig-gpm">
+                                <rect key="frame" x="0.0" y="-40" width="375" height="216"/>
                             </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="0.61304045376712324" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="sZX-4H-1KZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="10" id="3Ss-cA-zVS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qkh-Mf-KfA" secondAttribute="trailing" constant="10" id="6rR-fl-vYD"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jbm-nv-Rc0" secondAttribute="trailing" constant="20" id="7s7-vQ-b1P"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Qkh-Mf-KfA" secondAttribute="bottom" constant="20" id="FNI-Jn-pdu"/>
                             <constraint firstItem="jbm-nv-Rc0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="NbS-Da-8XB"/>
                             <constraint firstItem="sZX-4H-1KZ" firstAttribute="top" secondItem="jbm-nv-Rc0" secondAttribute="bottom" constant="10" id="PhT-vJ-zdo"/>
                             <constraint firstItem="uUx-ig-gpm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Qg8-ct-FTK"/>
+                            <constraint firstItem="Qkh-Mf-KfA" firstAttribute="width" secondItem="sZX-4H-1KZ" secondAttribute="width" id="RQl-Mq-J23"/>
                             <constraint firstItem="jbm-nv-Rc0" firstAttribute="top" secondItem="uUx-ig-gpm" secondAttribute="bottom" id="S8k-EO-mCu"/>
-                            <constraint firstItem="sZX-4H-1KZ" firstAttribute="leading" secondItem="Qkh-Mf-KfA" secondAttribute="trailing" constant="10" id="Zy3-kA-5Sa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sZX-4H-1KZ" secondAttribute="bottom" constant="20" id="cXG-dL-Tqk"/>
                             <constraint firstItem="Qkh-Mf-KfA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gbC-Nm-4F2"/>
                             <constraint firstItem="jbm-nv-Rc0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="iuv-Cx-d0F"/>
@@ -129,6 +129,7 @@
                         <outlet property="leftStack" destination="Qkh-Mf-KfA" id="BEr-c4-kmo"/>
                         <outlet property="pickerStation" destination="uUx-ig-gpm" id="86b-0O-hos"/>
                         <outlet property="rightLabel" destination="qsb-Cu-k9q" id="bFo-Sc-9fT"/>
+                        <outlet property="rightLabelAxis" destination="3Ss-cA-zVS" id="pzz-6c-orp"/>
                         <outlet property="rightStack" destination="sZX-4H-1KZ" id="LxA-VX-oze"/>
                         <outlet property="verticalConstraint" destination="iuv-Cx-d0F" id="4cu-Tt-xQw"/>
                     </connections>
